--- a/styleGamePage.css
+++ b/styleGamePage.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url(img/);
+    background-image: url(img/thumb2-4k-gambling-table-casino-dice-chips.jpg);
     justify-content: center;
     background-color: #cccccc;
     background-repeat: no-repeat;
