--- a/styleHomePage.css
+++ b/styleHomePage.css
@@ -52,7 +52,10 @@ body {
     min-width: 127px;
     box-shadow: 3px 6px #322c2c;
 }
-
+.button:hover {
+    background-color: rgb(15, 150, 8);
+    box-shadow: 3px 6px black;
+}
 .start {
     padding: 5px;
     margin: 5px;
@@ -65,6 +68,7 @@ body {
 .info {
     font-family: fantasy;
     font-size: 2.5rem;
-    color: antiquewhite;
+    color: rgb(0, 0, 0);
     font-style: italic;
+    background-color: azure;
 }
