--- a/styleGamePage.css
+++ b/styleGamePage.css
@@ -1,27 +1,23 @@
 body, html {
     height: 100%;
+    font-family: 'Lato', sans-serif;
 }
-body {
-    position: relative; 
-    height: 100%;
-    width: 100%;
-}
+
 .play {
     font-size: 2.6rem;
     padding-bottom: 2%;
     padding-top: 2%;
     text-align: center;
 }
-@media only screen and (max-width: 359px) {
+@media only screen and (max-width: 800px) {
     .play {
-       font-size: 1.5rem;
+       font-size: 1.3rem;
        padding-bottom: 2%;
        padding-top: 2%
     }
-    .body {
-        background-color: #931717;
-    }
 }
+
+
     /* 
     @media only screen and (min-width: 407px) {
 
@@ -38,14 +34,19 @@ body {
 
 } */
 
-
+.diceIcon {
+    padding: 2%;
+    margin: 2%;
+    text-align: center;
+}
 .lancer {
+    display: flex;
     padding: 1%;
     margin: 1%;
     align-items: center;
     justify-content: center;
 }
-#throw:hover {
+.throw:hover {
     box-shadow: 10px 10px;
 }
 
@@ -55,15 +56,7 @@ body {
     justify-content: center;
 }
 .contain {
-    padding: 2px;
-    margin: 2px;
     background-image: url(img/background.png);
-    align-items: center;
-    justify-content: center;
-    margin: 1px;
-    padding: 1px;
-    position: relative; 
-    height: 100%;
     width: 100%;
     align-items: center;
     justify-content: center;
@@ -77,7 +70,7 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding-top: 2%;
+    padding: 2%;
 }
 .dices {
     display: flex;
@@ -92,6 +85,7 @@ display: flex;
 justify-content: center;
 justify-content: space-around;
 padding: 2%;
+margin: 5%;
 
 }
 .img-box {
@@ -110,6 +104,32 @@ padding: 2%;
     display: flex;
     flex-wrap: wrap;
 }
+.button {
+    width: 20%;
+    max-width: 20%;
+    height: auto;
+    text-align: center;
+    align-items: center;
+    padding: 10px;
+    margin: 10px;
+    border: none;
+    color: rgb(255, 255, 255);
+    background-color: rgb(45, 117, 4);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    width: 15%;
+    height: auto;
+    justify-content: center;
+    border: rgb(0, 0, 0) solid 1.5px;
+    border-radius: 12px;
+    min-width: 127px;
+    box-shadow: 3px 6px #322c2c;
+}
+.button:hover {
+    background-color: rgb(15, 150, 8);
+    box-shadow: 3px 6px black;
+}
 
-  
 
