--- a/style-dice-loader.css
+++ b/style-dice-loader.css
@@ -7,11 +7,12 @@ body, html {
 	max-width: 100vw !important;
 	background: #000;
 	z-index: 100;
+	position:fixed;
 }
 
 .centering-block {
 	text-align: center;
-	z-index: 100;
+	z-index: 1000;
 }
 
 .centering-block:before {
@@ -439,3 +440,4 @@ body, html {
 	75% {
 		background-color: #c69;
 	}
+}
