--- a/styleHomePage.css
+++ b/styleHomePage.css
@@ -11,7 +11,7 @@ body {
     padding: 1px;
     position: relative; 
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
