--- a/styleHomePage.css
+++ b/styleHomePage.css
@@ -25,19 +25,35 @@ body {
 
 .title {
     color: rgb(255, 255, 255);
-    font-size: 5rem;
+    font-size: 199%;
     text-align: center;
     border-top: solid 2px;
     border-bottom: solid 2px;
     opacity: 1;
+    text-transform: uppercase;
+    background-image: linear-gradient(
+    -225deg,
+    #4311f8 0%,
+    #1edc1e 29%,
+    #ff7676 67%,
+    #2e2d0e 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  font-size: 50px;
+  
 }
 
 .button {
     padding: 10px;
     margin: 10px;
     border: none;
-    color: rgb(255, 255, 255);
-    background-color: rgb(45, 117, 4);
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -48,8 +64,19 @@ body {
     border: rgb(0, 0, 0) solid 1.5px;
     border-radius: 12px;
     font-size: 2em;
+    text-decoration: solid;
     min-width: 127px;
     box-shadow: 3px 6px #322c2c;
+}
+
+.btn {
+    background-color: #ffffffa7!important;
+    color: rgba(11, 11, 182, 0.624)!important;
+}
+.btn:hover {
+    color: #fcfffdae!important;
+    background-color: #362c2c9a!important;
+    
 }
 .button:hover {
     background-color: rgb(15, 150, 8);
@@ -64,10 +91,38 @@ body {
     justify-content: center;
 }
 
+  
 .info {
-    font-family: fantasy;
-    font-size: 2.5rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.5rem;
     color: rgb(0, 0, 0);
-    font-style: italic;
+    font-style:normal;
+    letter-spacing: 0.05em;
     background-color: azure;
 }
+.animate, .button-play, .button-ok {
+    text-transform: uppercase;
+    background-image: linear-gradient(
+    -225deg,
+    #4311f8 0%,
+    #1edc1e 29%,
+    #ff7676 67%,
+    #2e2d0e 100%
+  );
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    color: #fff;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 2s linear infinite;
+    display: inline-block;
+    font-size: 50px;
+}
+
+@keyframes textclip {
+    to {
+      background-position: 200% center;
+    }
+  }
