--- a/styleGamePage.css
+++ b/styleGamePage.css
@@ -7,7 +7,7 @@ body, html {
 .contain {
     height: 100%;
     background-image: url(img/background.png);
-
+    overflow: auto;
 }
 .play {
     font-size: 2.6rem;
